--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
+    "iso-3166-1-alpha-2": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
